--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Алексей ОтзыПро</h1>
+        <h1>Алексей ОтзывПро</h1>
         <p>Эксперт SMM и цифрового продвижения</p>
         
         <button onclick="toggleBio()">BIO</button>
